# grpc

./: .bazelignore  .bazelrc  .bazelversion  .clang-format  .clang-tidy  .clang_complete  .classpath  .coveragerc  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitallowed  .gitattributes  .gitignore  .gitmodules  .istanbul.yml  .pull-review  .pylintrc  .pylintrc-examples  .pylintrc-tests  .pylintupdatedrc  .pylintupdatedrc-examples  .pylintupdatedrc-tests  .rspec  .ruby-version  .source-revision  .travis.yml  .yapfignore  .yardopts  0001-Add-TLS-1.2-ECDSA-ciphersuites-to-defaults.patch  0001-Fix-Android-CPP-build.patch  AGENTS.md  AUTHORS  Armstrong number  BUILD  BUILD.gn  BUILDING.md  BoringSSL-Package.swift  BoringSSL.podspec  C++ Program to Find Quotient and Remainderv  (+193 more)
bazel/: .cython_library.bzl.swo  BUILD  OWNERS  _gevent_test_main.py  _logging_threshold_test_main.py  _run_time_type_check_main.py  _single_module_tester.py  api_build_system.bzl  apple_support.patch  cc_grpc_library.bzl  com_google_fuzztest.MODULE.bazel  compilation_database.bzl  copts.bzl  custom_exec_properties.bzl  cython_library.bzl  dependency_imports.bzl  downloader.cfg  dtrace.bzl  envoy_http_archive.bzl  experiments.bzl  experiments.github.bzl  experiments_helper.bzl  extensions.bzl  generate_cc.bzl  generate_objc.bzl  gevent_test.bzl  google_cloud_cpp.MODULE.bazel  googleapis.BUILD  googleapis.MODULE.bazel  googleapis.modules.patch  grpc_build_system.bzl  grpc_build_system_test.bzl  grpc_custom_exec_properties.MODULE.bazel  grpc_deps.bzl  grpc_extra_deps.bzl  grpc_objc_library.bzl  grpc_python.bzl  grpc_python_deps.bzl  grpc_util.bzl  internal_python_rules.bzl  (+22 more)
bazel/abseil-cpp/: bazel_9_support.patch
bazel/c-ares/: bazel_9.patch
bazel/foreign_cc/: BUILD
bazel/googleapis/patches/: add_module_bazel.patch  fix_google_cloud_cpp.patch
bazel/googletest/: bazel_9.patch
bazel/opentelemetry-cpp/: bazel_9_support.patch
bazel/private/: BUILD  plugin_toolchain_helpers.bzl  proto_toolchain_helpers.bzl
bazel/protobuf/: fix_msvc_crash.patch  fix_name_conflict.patch
bazel/re2/: bazel_9.patch  bazel_9_support.patch
bazel/test/cpp_test_repo/: BUILD  README.md  WORKSPACE  helloworld.proto
bazel/toolchains/: BUILD  plugins.bzl
bazel/zlib/: BUILD  add_build_file.patch  add_custom_build_file.patch  add_module_dot_bazel.patch  bazel_9_support.patch  delete_bcr_build_file.patch  fix_io_header.patch
examples/cpp/health/: BUILD  (+4 more)
google/api/: BUILD.bazel  README.md  backend.proto  client.proto  consumer.proto  context.proto  control.proto  documentation.proto  field_behavior.proto  httpbody.proto  label.proto  metric.proto  quota.proto  resource.proto  service.proto  source_info.proto  system_parameter.proto
google/cloud/: BUILD.bazel
google/type/: BUILD.bazel  README.md  calendar_period.proto  color.proto  date.proto  dayofweek.proto  expr.proto  fraction.proto  postal_address.proto  type.yaml
src/c-ares/: CMakeLists.txt  gen_build_yaml.py
templates/: .bazelversion.inja  .bazelversion.template  BUILD.bazel  BUILD.gn.template  BUILD.template  BoringSSL-Package.swift.inja  BoringSSL-Package.swift.template  CMakeLists.txt.inja  CMakeLists.txt.old-template  CMakeLists.txt.template  MODULE.bazel.inja  MODULE.bazel.template  Makefile.template  Package.swift.inja  Package.swift.template  README.md  Rakefile.template  VERSION.sh.template  _metadata.py.inja  _metadata.py.template  basic_template.yaml  binding.gyp.template  build_config.rb.inja  build_config.rb.template  composer.json.template  config.m4.inja  config.m4.template  config.w32.inja  config.w32.template  gRPC-C++.podspec.template  gRPC-Core.podspec.template  gRPC-ProtoRPC.podspec.inja  gRPC-ProtoRPC.podspec.template  gRPC-RxLibrary.podspec.inja  gRPC-RxLibrary.podspec.template  gRPC.podspec.inja  gRPC.podspec.template  gpr_dump.template  grpc.def.inja  grpc.def.template  (+7 more)
templates/cc/: BUILD.bazel  const.go  duration.go  enum.go  file.go  known.go  ltgt.go  msg.go  none.go  num.go  timestamp.go
templates/cmake/: grpc-config-version.cmake.in  grpc-config.cmake.in
templates/doc/: bazel_support.md.inja  bazel_support.md.template
templates/go/: duration.go  file.go  message.go  required.go
templates/goshared/: any.go  duration.go  enum.go  known.go  map.go  none.go  num.go  register.go  repeated.go  string.go  timestamp.go  wrapper.go
templates/java/: BUILD.bazel  any.go  bool.go  duration.go  file.go  message.go  num.go  oneof.go  repeated.go  required.go
templates/py_xds_protos/: grpc_version.py.inja  python_version.py.inja
templates/shared/: BUILD.bazel  context.go  functions.go  reflection.go
templates/src/: aggregate.template
templates/tools/: cmakelists.template
templates/vsprojects/: Grpc.mak.template  build_protos.bat.template  build_protos.sh.template  build_test_protos.sh  buildtests_c.sln.template  buildtests_core.sln.template  buildtests_cxx.sln.template  cpptest.props.template  generate_debug_projects.sh  global.props.template  grpc.sln.template  grpc_c_runtime.sln.template  grpc_cpp_runtime.sln.template  grpc_csharp_ext.sln.template  grpc_protoc_plugins.sln.template  openssl.props.template  packages.include  protobuf.props.template  protoc.props.template  sln_defs.include  vcxproj.filters_defs.include  vcxproj.template  vcxproj_defs.include  winsock.props.template  zlib-dll.props.template  zlib.props.template
tools/artifact_gen/: .gitignore  BUILD  MODULE.bazel  artifact_gen.cc  artifact_gen.sh  boop.cc  boringssl.cc  boringssl.h  build_metadata.cc  build_metadata.h  build_metadata.json  expand_version.cc  expand_version.h  external_http_archives.bzl  extract_bazelmod_repositories.cc  extract_bazelmod_repositories.h  extract_metadata_from_bazel_mod.cc  extract_metadata_from_bazel_mod.h  extract_metadata_from_bazel_xml.cc  extract_metadata_from_bazel_xml.h  fix_absl_g++15_linker_error_workaround.bazelrc  gen_upb_api_from_bazel.cc  gen_upb_api_from_bazel.sh  inja.BUILD  log.txt  metadata_for_wrapped_languages.cc  metadata_for_wrapped_languages.h  php.cc  php.h  render.cc  render.h  utils.cc  utils.h
(+48381 files in other folders)
